--- a/chia/util/initial-config.yaml
+++ b/chia/util/initial-config.yaml
@@ -685,7 +685,7 @@ simulator:
   farming_address:
 
   # the directory used to save plots
-  # for the plot directory below the final directory will be: ~/.chia/simulator/plots
+  # for the plot directory below the final directory will be: ~/.cryptomines/simulator/plots
   plot_directory: simulator/plots
 
   # Should we use real time in the simulated chain?
